tarea: se instaló tailwind 3 pero no usando el compañero porque decía como instalar el 4, y normalmente se marea mucho con las cosas.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,3 +42,26 @@ services:
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=alestock;Username=postgres;Password=postgres
     ports:
       - "8080:8080"
+
+  web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile
+    container_name: ale-web
+    volumes:
+      - ./web:/app        # permite live reload
+      - /app/node_modules # evita conflictos entre host y contenedor
+    ports:
+      - "4200:4200"
+    depends_on:
+      - api
+  #web:
+  #  build:
+  #    context: ./web
+  #    dockerfile: Dockerfile
+  #  container_name: ale-web
+  #  restart: always
+  #  ports:
+  #    - "4200:80"
+  #  depends_on:
+  #    - api
