--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,28 +1,19 @@
-# Etapa 1: Construcción de Angular
-FROM node:22-alpine AS build
+# Etapa base
+FROM node:22-alpine
 
 WORKDIR /app
 
-# Copiar package.json y package-lock.json (o pnpm-lock.yaml)
+# Copiamos package.json y package-lock.json (si existe)
 COPY package*.json ./
 
-# Instalar Angular CLI y dependencias
+# Instalamos dependencias
 RUN npm install -g @angular/cli@19 && npm install
 
-# Copiar el resto del código fuente
+# Copiamos el resto del código fuente
 COPY . .
 
-# Construir aplicación Angular
-RUN ng build --configuration production
+# Exponemos el puerto estándar de Angular
+EXPOSE 4200
 
-# Etapa 2: Servir con Nginx
-FROM nginx:stable-alpine
-
-# Copiar los artefactos compilados
-COPY --from=build /app/dist/web/browser /usr/share/nginx/html
-
-# Copiar configuración personalizada de Nginx
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Comando por defecto: ejecutar en modo desarrollo (live reload)
+CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200"]
